[package]
name = "netprint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wmi = "0.11.4"
sysinfo = "0.27.1"
clap = { version = "4.1.1", features=["derive"] }
serde = { version = "1.0.151", features=["derive"] }

[dependencies.windows]
version = "0.42.0"
features = [
    "Win32_System_Com"
]